[tool.poetry]
name = "llm-testing-example"
version = "0.1.0"
description = "Simple LLM testing example"
authors = ["Mike Vanbuskirk <mike@mikevanbuskirk.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.305"
openai = "^0.28.1"
ruff = "^0.0.291"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pyspellchecker = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
